added link to .md

--- a/index.html
+++ b/index.html
@@ -18,11 +18,36 @@
 
 <body>
 
-<div id="mainBox" class="row container">
+    <div class="container">
 
+        <div class="mainBox">
 
+            <div class="row start-page">
+                <div class="row img-initial col-sm-12">
+                    <div class="row text-center">
+                        <h1>Jim Carrey Trivia Game</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <button id="start" type="button" class="btn btn-success">Riddle Me This</button>
+                </div>
+            </div>
 
-</div>
+            <div class="row questions-page">
+                <div class='timer text-left col-sm-3'></div>
+                <div class="question col-sm-6"></div>
+                <div class='score text-right col-sm-3'>
+                    <div class="right"></div>
+                    <div class="wrong"></div>
+                </div>
+            </div>
+
+            <div class="row answers"></div>
+            <div class="row reset-button"></div>
+
+        </div>
+
+    </div>
 
 
 
