--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                 <div class='timer text-left col-sm-3'></div>
                 <div class="question col-sm-6"></div>
                 <div class='score text-right col-sm-3'>
-                    <div class="right"></div>
-                    <div class="wrong"></div>
+                    <div class= "right"></div>
+                    <div class= "wrong"></div>
+                    <div class= "unanswered"></div>
                 </div>
             </div>
 
